# lovedos

./: .gitignore  CMakeLists.txt  DJGPP.cmake  build.py
.github/workflows/: build.yml
cmake/: make_c_include.cmake
doc/: api.md  building.md  conf.md
src/: CMakeLists.txt  audio.c  config.h.in  event.c  event.h  filesystem.c  filesystem.h  font.c  font.h  image.c  image.h  keyboard.c  luaobj.c  luaobj.h  main.c  main.h  mouse.c  mouse.h  package.c  package.h  palette.c  quad.h  soundblaster.c  soundblaster.h  vga.c  vga.h  vgm.c  vgm.h
src/embed/: CMakeLists.txt  boot.lua
src/lib/: CMakeLists.txt
src/lib/cmixer/: CMakeLists.txt
src/lib/dmt/: CMakeLists.txt
src/lib/lua/: CMakeLists.txt  loslib.c
src/lib/microtar/: CMakeLists.txt
src/lib/pctimer/: CMakeLists.txt
src/lib/stb/: CMakeLists.txt
src/modules/: l_audio.c  l_dos.c  l_event.c  l_filesystem.c  l_font.c  l_graphics.c  l_image.c  l_keyboard.c  l_love.c  l_mouse.c  l_quad.c  l_source.c  l_system.c  l_timer.c  l_vgm.c
