project(stb LANGUAGES C)

add_library(stb_image STATIC stb_image.c)
target_include_directories(stb_image PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

option(STBI_JPEG "Enable JPEG support in STBI" ON)
if (NOT STBI_JPEG)
    target_compile_definitions(stb_image PRIVATE STBI_NO_JPEG)
endif()
option(STBI_PNG "Enable PNG support in STBI" ON)
if (NOT STBI_PNG)
    target_compile_definitions(stb_image PRIVATE STBI_NO_PNG)
endif()
option(STBI_BMP "Enable BMP support in STBI" ON)
if (NOT STBI_BMP)
    target_compile_definitions(stb_image PRIVATE STBI_NO_BMP)
endif()
option(STBI_PSD "Enable PSD support in STBI" ON)
if (NOT STBI_PSD)
    target_compile_definitions(stb_image PRIVATE STBI_NO_PSD)
endif()
option(STBI_TGA "Enable TGA support in STBI" ON)
if (NOT STBI_TGA)
    target_compile_definitions(stb_image PRIVATE STBI_NO_TGA)
endif()
option(STBI_GIF "Enable GIF support in STBI" ON)
if (NOT STBI_GIF)
    target_compile_definitions(stb_image PRIVATE STBI_NO_GIF)
endif()
option(STBI_HDR "Enable HDR support in STBI" ON)
if (NOT STBI_HDR)
    target_compile_definitions(stb_image PRIVATE STBI_NO_HDR)
endif()
option(STBI_PIC "Enable PIC support in STBI" ON)
if (NOT STBI_PIC)
    target_compile_definitions(stb_image PRIVATE STBI_NO_PIC)
endif()
option(STBI_PNM "Enable PNM (.PPM and .PGM) support in STBI" ON)
if (NOT STBI_PNM)
    target_compile_definitions(stb_image PRIVATE STBI_NO_PNM)
endif()

add_library(stb_truetype STATIC stb_truetype.c)
target_include_directories(stb_truetype PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})